# vangers-android-cpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: vangers_linux_build.yml  vangers_macos_build.yml  vangers_windows_32_build.yml  vangers_windows_64_build.yml  vangers_windows_all_build.yml
cmake/: FindRustyVangers.cmake
data/resource/iscreen/: oftr.scb
lib/glad/: CMakeLists.txt
lib/renderer/: CMakeLists.txt
lib/renderer/src/renderer/: vectormath.cpp
lib/renderer/src/renderer/compositor/: AbstractCompositor.h
lib/renderer/src/renderer/compositor/gles3/: GLES3Compositor.cpp  GLES3Compositor.h
lib/renderer/src/renderer/visualbackend/rust/: RustVisualBackend.cpp  vange_rs.h
lib/xgraph/: CMakeLists.txt  xgraph.cpp  xgraph.h
lib/xsound/: CMakeLists.txt  avi.cpp
lib/xtool/: CMakeLists.txt  xerrhead.cpp  xtcore.cpp
overrides/ffmpeg/: avi.cpp  avi.h
scripting/: README.md
server/: CMakeLists.txt
src/: CMakeLists.txt  road.cpp
src/3d/: 3dobject.cpp  3dobject.h  dynamics.cpp
src/iscreen/: iextern.cpp  iscr_fnc.cpp
src/terra/: vmap.cpp  vmap.h
src/units/: hobj.cpp  items.cpp  mechos.cpp  mechos.h
src/vss/: sys-bridge.cpp
surmap/: CMakeLists.txt
